--- a/MapleBearSystem/hsqldb/mapledbfile.properties
+++ b/MapleBearSystem/hsqldb/mapledbfile.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Sun Feb 24 23:22:32 BRT 2019
+#Tue Mar 05 15:01:10 BRT 2019
 version=2.4.1
-modified=no
+modified=yes
 tx_timestamp=0
