--- a/MapleBearSystem/build.gradle
+++ b/MapleBearSystem/build.gradle
@@ -53,6 +53,7 @@ dependencies {
 	
 	//JSON Implementation by Google
   	implementation 'com.google.code.gson:gson:2.8.5'
+  	implementation 'com.github.gilberto-torrezan:viacep:1.2.0'
 
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     // api 'org.apache.commons:commons-math3:3.6.1'
