--- a/MapleBearSystem/hsqldb/mapledbfile.properties
+++ b/MapleBearSystem/hsqldb/mapledbfile.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Sun May 26 11:50:31 BRT 2019
+#Sat Jun 01 13:15:52 BRT 2019
 version=2.4.1
-modified=no
+modified=yes
 tx_timestamp=0
