--- a/MapleBearSystem/data/db.properties
+++ b/MapleBearSystem/data/db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Tue Jun 04 13:12:34 BRT 2019
+#Wed Jun 05 20:15:40 BRT 2019
 version=2.4.1
-modified=no
+modified=yes
 tx_timestamp=0
