--- a/MapleBearSystem/data/db.properties
+++ b/MapleBearSystem/data/db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Wed Jun 05 20:15:40 BRT 2019
+#Sun Jun 09 00:47:37 BRT 2019
 version=2.4.1
-modified=yes
+modified=no
 tx_timestamp=0
