--- a/MapleBearSystem/hsqldb/mapledbfile.properties
+++ b/MapleBearSystem/hsqldb/mapledbfile.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Wed Jun 05 21:16:35 BRT 2019
+#Sun Jun 09 04:18:27 BRT 2019
 version=2.4.1
-modified=yes
+modified=no
 tx_timestamp=0
