--- a/MapleBearSystem/build.gradle
+++ b/MapleBearSystem/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 	
     //Hibernate Agroal
 	compile 'org.hibernate:hibernate-agroal:5.3.6.Final'
+	compile group:'org.quartz-scheduler', name: 'quartz' , version:'2.3.0'
 	
 	//PostgreSQL Library and Driver
 	compile 'org.postgresql:postgresql:42.2.5'
