--- a/MapleBearSystem/data/db.properties
+++ b/MapleBearSystem/data/db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Thu Sep 19 18:16:10 BRT 2019
+#Sun Oct 13 15:26:11 BRT 2019
 version=2.4.1
-modified=no
+modified=yes
 tx_timestamp=0
