--- a/MapleBearSystem/data/db.properties
+++ b/MapleBearSystem/data/db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Sun Oct 13 15:26:11 BRT 2019
+#Sun Oct 20 01:50:17 BRT 2019
 version=2.4.1
-modified=yes
+modified=no
 tx_timestamp=0
